# mummi-core

./: CITATION.cff  NOTICE  README.md  pyproject.toml  setup.py
mummi_core/: __init__.py
mummi_core/brokers/: __init__.py  base.py  rabbitmq.py  rabbitmq_rpc.py  utils.py
mummi_core/interfaces/: README.md  __init__.py  base.py  default_functions.py  redis.py  simple.py  tar.py  utils.py
mummi_core/scripts/: __init__.py  bind_global_redis.py  bind_local_redis.py  cmdClient.py  cmdServer.py  monitor_mummi.py
mummi_core/utils/: __init__.py  cmdServer.py  logger.py  naming.py  timer.py  utilities.py
mummi_core/workflow/: README.md  __init__.py  feedback_manager.py  flux_env.py  job.py  jobTracker.py
setup/: bootstrap_flux.sh  launch_flux.sh  launch_monitor.sh  launch_redis.sh
setup/flux/: flux_bootstrap.sh  flux_env.sh  flux_launch.sh
setup/redis/: create_redis_dirs.sh  load_redis_env.sh  start_all_redis_nodes.sh  start_redis_debug.sh  start_redis_node.sh
tests/: test_interface.py  test_jobtracker.py
