[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mummi-core"
version = "1.0.0"
requires-python = ">=3.9.15"
description = "Multiscale Machine-Learned Modeling Infrastructure Core"
readme = "README.md"
maintainers = [
    { name = "Loic Pottier", email = "pottier1@llnl.gov" },
    { name = "Helgi I Ingólfsson", email = "ingolfsson1@llnl.gov" }
]
authors = [
    { name = "Harsh Bhatia", email = "hbhatia@llnl.gov" },
    { name = "Helgi I Ingólfsson", email = "ingolfsson1@llnl.gov" },
    { name = "Francesco Di Natale", email = "dinatale3@llnl.gov" },
    { name = "Joseph Moon", email = "moon15@llnl.gov" },
    { name = "Joseph R Chavez", email = "chavez35@llnl.gov" },
    { name = "Loic Pottier", email = "pottier1@llnl.gov" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "filelock>=3.0.12",
    "maestrowf>=1.1.9",
    "numpy>=1.20.2",
    "pika>=1.3.0",
    "pip>=21.2.4",
    "psutil>=5.8.0",
    "pytaridx>=1.0.2",
    "pytest>=6.2.4",
    "PyYAML>=5.3.1",
    "watchdog>=2.1.6",
]

[project.scripts]
mummi_bind_global_redis = "mummi_core.scripts.bind_global_redis:main"
mummi_bind_local_redis = "mummi_core.scripts.bind_local_redis:main"
mummi_cmdclient = "mummi_core.scripts.cmdClient:main"
mummi_cmdserver = "mummi_core.scripts.cmdServer:main"
mummi_monitor = "mummi_core.scripts.monitor_mummi:main"

[project.urls]
Homepage = "https://github.com/mummi-framework/mummi-core"

# [project.optional-dependencies]
# dev = ["check-manifest"]
# test = ["coverage"]

[tool.setuptools]
packages = ["mummi_core"]

# # Black formatting
# [tool.black]
# line-length = 120
# include = '\.pyi?$'
# exclude = '''
# /(
#       .eggs         # exclude a few common directories in the
#     | .git          # root of the project
#     | .hg
#     | .mypy_cache
#     | .tox
#     | venv
#     | _build
#     | buck-out
#     | build
#     | dist
#   )/
# '''

# # iSort
# [tool.isort]
# profile = "black"
# line_length = 120
# multi_line_output = 3
# include_trailing_comma = true
# virtual_env = "venv"

# # flake8
# [tool.flake8]
# ignore = ["E501", "W503", "E226", "BLK100", "E203"]
# max-line-length = 120
# exclude = [
#     # No need to traverse our git directory
#     ".git",
#     # There's no value in checking cache directories
#     "__pycache__",
#     "*.egg-info",
#     "build"
# ]
# # E501: Line too long
# # W503: Line break occurred before binary operator
# # E226: Missing white space around arithmetic operator

# [tool.ruff]
# lint.ignore = ["E501", "E226", "E203"]
# show-fixes = true
# exclude = [
#   ".git",
#   "__pycache__",
#   "*.egg-info",
#   "build"
# ]
# # change the default line length number or characters.
# line-length = 120
# lint.select = ['E', 'F', 'W', 'A', 'PLC', 'PLE', 'PLW', 'I', 'N', 'Q']

# [tool.yapf]
# ignore = ["E501", "W503", "E226", "BLK100", "E203"]
# column_limit = 120
